@@ -1,3 +1,7 @@
+20191210
+========
+- Fixed #46322 - Use estimatedDocumentCount() instead of countDocuments()
+
 20191112
 ========
 - Add #41710 - Separate between DataSource and Base View (wrapper) configuration items
